logs/bibreview.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bibreview'...
Compiling './lib/python3.5/site-packages/bibreview/bayes_classifier.py'...
***   File "./lib/python3.5/site-packages/bibreview/bayes_classifier.py", line 36
    print "WARNING: NLTK Python module not found. This can reduce the performance of the Bayes classifier!"
                                                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bibreview/bayesian_classifier2.py'...
***   File "./lib/python3.5/site-packages/bibreview/bayesian_classifier2.py", line 36
    print conts[0][1] + conts[1][0], "erreurs"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bibreview/bayesian_classifier_nltk.py'...
***   File "./lib/python3.5/site-packages/bibreview/bayesian_classifier_nltk.py", line 50
    print reference.gold_class, reference.pred_class, reference.gold_class == reference.pred_class
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bibreview/command_line.py'...
***   File "./lib/python3.5/site-packages/bibreview/command_line.py", line 46
    print "BibReview version %s" % globdef.VERSION
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/bibreview/data'...
Compiling './lib/python3.5/site-packages/bibreview/gui.py'...
***   File "./lib/python3.5/site-packages/bibreview/gui.py", line 455
    print authors
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bibreview/kfeatures.py'...
***   File "./lib/python3.5/site-packages/bibreview/kfeatures.py", line 57
    print reference.gold_class, reference.pred_class, probas, reference.gold_class == reference.pred_class
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/bibreview/neural_network.py'...
***   File "./lib/python3.5/site-packages/bibreview/neural_network.py", line 130
    print p[0], '->', self.update(p[0])
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bibreview/princomp.py'...
***   File "./lib/python3.5/site-packages/bibreview/princomp.py", line 91
    print "%s MeSH words" % len(MESH_WORDS)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/bibreview/test.py'...
***   File "./lib/python3.5/site-packages/bibreview/test.py", line 11
    print "bibreview %s" % ligne_de_commande
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
